--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -40,12 +40,12 @@
     "index_access_arbitrage_tarif_1_price": "Free",
     "index_access_arbitrage_tarif_1_provide_1_1": "Tracking up to",
     "index_access_arbitrage_tarif_1_provide_1_2": "5 cryptocurrencies online",
-    "index_access_arbitrage_tarif_provide_2": "Inter-exchange arbitrage ",
+    "index_access_arbitrage_tarif_provide_2": "Cross-exchange arbitrage ",
     "index_access_arbitrage_tarif_provide_3": "Intra-exchange arbitrage",
     "index_access_arbitrage_tarif_provide_4": "Filters",
     "index_access_arbitrage_tarif_provide_5": "Setting the alarm time",
     "index_access_arbitrage_tarif_provide_6": "Notifications in Telegram",
-    "index_access_arbitrage_tarif_provide_7": "Notifications of available profitable bundles for inter-exchange arbitrage",
+    "index_access_arbitrage_tarif_provide_7": "Notifications of available profitable bundles for Cross-exchange arbitrage",
     "index_access_arbitrage_tarif_provide_8": "Exchange prices for each pair",
     "index_access_arbitrage_tarif_provide_9": "Getting spreads in JSON format for your bot",
     "index_access_arbitrage_tarif_1_button": "Sign up",
@@ -90,7 +90,7 @@
     "layout_nav_1_menu_1": "Benefits",
     "layout_nav_1_menu_2": "Community",
     "layout_header_nav_2_name": "Arbitration tools",
-    "layout_nav_2_menu_1": "Inter-exchange arbitrage",
+    "layout_nav_2_menu_1": "Cross-exchange arbitrage",
     "layout_nav_2_menu_2": "Intra-exchange arbitrage",
     "layout_nav_2_menu_3": "Exchanges and commissions",
     "layout_nav_3_menu_1": "Guides",
@@ -150,7 +150,7 @@
     "account_notification_error_title": "Failed to change data",
     "account_notification_error_description": "Unforeseen circumstances can trip us all up. Please try submitting the data change request again and check your internet connection.",
 
-    "arbitrage_title": "Inter-exchange arbitrage",
+    "arbitrage_title": "Cross-exchange arbitrage",
     "arbitrage_filter_element_1_name": "Cryptocurrency",
     "arbitrage_filter_element_1_selection_placeholder": "Any",
     "arbitrage_filter_element_2_name": "Crypto exchanges",
@@ -163,7 +163,7 @@
     "arbitrage_filter_button_text_name": "Add",
     "arbitrage_filter_button_reset_text_name": "Reset",
     "arbitrage_auth_text_heading": "Subscribe to track more cryptocurrencies",
-    "arbitrage_auth_text_description": "Up to 30 pairs online, set up notifications in Telegram, intra- and inter-exchange arbitrage",
+    "arbitrage_auth_text_description": "Up to 30 pairs online, set up notifications in Telegram, intra- and Cross-exchange arbitrage",
     "arbitrage_auth_text_button": "Subscribe",
     "arbitrage_inactive_text_heading": "Sign up to track cryptocurrencies",
     "arbitrage_inactive_text_description": "Once registered, you will have access to up to five cryptocurrencies online",
