--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -105,7 +105,7 @@
     "hint_unit_tg_mobile": "Перейти в Telegram бота",
 
     "payment_title": "Оплата подписки",
-    "payment_description": "Видео-инструкция по оплате в USDT с любой биржи или кошелька в пару кликов",
+    "payment_description": "Платеж на 1 месяц (30 дней)",
     "payment_button": "Оплатить",
     "payment_vpn": "При оплате может понадобиться VPN",
     "payment_success_notification_title": "Ваш заказ успешно оплачен",
