--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -53,7 +53,7 @@
     "index_access_arbitrage_tarif_2_badge": "Most popular",
     "index_access_arbitrage_tarif_2_price": "per month",
     "index_access_arbitrage_tarif_2_provide_1": "Tracking up to 30 cryptocurrencies online",
-    "index_access_arbitrage_tarif_2_button": "Choose plan",
+    "index_access_arbitrage_tarif_2_button": "Get checkout",
 
     "index_how_bot_works_title": "How the bot works",
     "index_how_bot_works_subtitle": "explained with examples",
