--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -53,7 +53,7 @@
     "index_access_arbitrage_tarif_2_badge": "Самый популярный",
     "index_access_arbitrage_tarif_2_price": "в месяц",
     "index_access_arbitrage_tarif_2_provide_1": "Отслеживание до 30 криптопар онлайн",
-    "index_access_arbitrage_tarif_2_button": "Выбрать тариф",
+    "index_access_arbitrage_tarif_2_button": "Оформить заказ",
 
     "index_how_bot_works_title": "Как работает бот",
     "index_how_bot_works_subtitle": "объясняем с примерами",
