--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,5 +1,5 @@
 {
-    "index_service_title": "Arbitration benefit search service",
+    "index_service_title": "Service for catching arbitrage spreads",
     "index_service_subtitle": "on the cryptocurrency market",
     "index_service_tariff_btn": "Choose plan",
     "index_service_progress_item_1_description_1": "arbitrage pairs right now with a profit up to 1-15%",
