--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -140,7 +140,7 @@
 
     "account_title": "Profile",
     "account_add_telegram_button_name": "Attach",
-    "account_subscription_title": "Premium subscription",
+    "account_subscription_title": "Premium",
     "account_subscription_active_text": "Premium subscription is active until",
     "account_subscription_inactive_text": "Subscription inactive",
     "account_subscription_inactive_button": "Pay",
