--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -140,7 +140,7 @@
 
     "account_title": "Личный кабинет",
     "account_add_telegram_button_name": "Привязать",
-    "account_subscription_title": "Премиум подписка",
+    "account_subscription_title": "Premium",
     "account_subscription_active_text": "Подписка премиум активна до",
     "account_subscription_inactive_text": "Подписка не активна",
     "account_subscription_inactive_button": "Оплатить",
