--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -41,7 +41,7 @@
     "index_access_arbitrage_tarif_1_provide_1_1": "Tracking up to",
     "index_access_arbitrage_tarif_1_provide_1_2": "5 cryptocurrencies online",
     "index_access_arbitrage_tarif_provide_2": "Cross-exchange arbitrage ",
-    "index_access_arbitrage_tarif_provide_3": "Intra-exchange arbitrage",
+    "index_access_arbitrage_tarif_provide_3": "Inter-exchange arbitrage",
     "index_access_arbitrage_tarif_provide_4": "Filters",
     "index_access_arbitrage_tarif_provide_5": "Setting the alarm time",
     "index_access_arbitrage_tarif_provide_6": "Notifications in Telegram",
@@ -91,7 +91,7 @@
     "layout_nav_1_menu_2": "Community",
     "layout_header_nav_2_name": "Arbitration tools",
     "layout_nav_2_menu_1": "Cross-exchange arbitrage",
-    "layout_nav_2_menu_2": "Intra-exchange arbitrage",
+    "layout_nav_2_menu_2": "Inter-exchange arbitrage",
     "layout_nav_2_menu_3": "Exchanges and commissions",
     "layout_nav_3_menu_1": "Guides",
     "layout_nav_3_menu_2": "Tutorial videos",
@@ -163,7 +163,7 @@
     "arbitrage_filter_button_text_name": "Add",
     "arbitrage_filter_button_reset_text_name": "Reset",
     "arbitrage_auth_text_heading": "Subscribe to track more cryptocurrencies",
-    "arbitrage_auth_text_description": "Up to 30 pairs online, set up notifications in Telegram, intra- and Cross-exchange arbitrage",
+    "arbitrage_auth_text_description": "Up to 30 pairs online, set up notifications in Telegram, inter- and Cross-exchange arbitrage",
     "arbitrage_auth_text_button": "Subscribe",
     "arbitrage_inactive_text_heading": "Sign up to track cryptocurrencies",
     "arbitrage_inactive_text_description": "Once registered, you will have access to up to five cryptocurrencies online",
