--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -136,7 +136,13 @@
     "auth_forget_password_title": "Восстановление пароля",
     "auth_forget_password_subtitle": "Отправим вам код из 4-х знаков на почту",
     "auth_forget_form_code_title": "Код из 4-х знаков",
-    "auth_forget_button": "Войти",
+    "auth_forget_form_password_title": "Новый пароль",
+    "auth_forget_button": "Отправить код",
+    "auth_confirm_button": "Подтвердить",
+    "auth_notification_error_title": "Неверные данные",
+    "auth_notification_error_email_description": "Пожалуйста введите корректный email",
+    "auth_notification_error_code_description": "Введенный код неверен",
+
 
     "account_title": "Личный кабинет",
     "account_add_telegram_button_name": "Привязать",
