--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -202,5 +202,7 @@
     "form_name_placeholder": "Как к вам обращаться",
     "form_question_helper_required_text": "Введите вопрос",
 
-    "popup_sending_button": "Вернуться в CoinHunter"
+    "popup_sending_button": "Вернуться в CoinHunter",
+
+    "404_error_text": "Похоже, мы столкнулись со сбоем. Страница, которую вы искали, исчезла в глубинах киберпространства. Не волнуйтесь, мы здесь, чтобы провести вас обратно к свету."
 }
