--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -95,6 +95,7 @@
     "layout_nav_2_menu_3": "Exchanges and commissions",
     "layout_nav_3_menu_1": "Guides",
     "layout_nav_3_menu_2": "Tutorial videos",
+    "layout_nav_support": "Support",
     "layout_header_account_menu_lk": "Profile",
     "layout_header_account_menu_logout": "Log out",
     "layout_header_registration": "Sign up",
