--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -95,6 +95,7 @@
     "layout_nav_2_menu_3": "Биржи и комиссии",
     "layout_nav_3_menu_1": "Гайды",
     "layout_nav_3_menu_2": "Обучающие видео",
+    "layout_nav_support": "Поддержка",
     "layout_header_account_menu_lk": "Личный кабинет",
     "layout_header_account_menu_logout": "Выйти",
     "layout_header_registration": "Регистрация",
