Fix exchanges padding and title

--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -176,7 +176,7 @@
     "arbitrage_inactive_text_description": "После регистрации вам будет доступно до пяти криптопар в режиме онлайн",
     "arbitrage_inactive_text_button": "Зарегистрироваться",
 
-    "table_unit_title": "Таблица",
+    "table_unit_title": "Обменники и комиссии",
     "table_unit_h1": "Пара",
     "table_unit_h2": "Биржи",
     "table_unit_h3": "Прибыль",
