--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -175,7 +175,7 @@
     "arbitrage_inactive_text_description": "Once registered, you will have access to up to five cryptocurrencies online",
     "arbitrage_inactive_text_button": "Sign up",
 
-    "table_unit_title": "Table",
+    "table_unit_title": "Exchanges and commissions",
     "table_unit_h1": "Pair",
     "table_unit_h2": "Exchanges",
     "table_unit_h3": "Profit",
