--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -205,5 +205,7 @@
 
     "popup_sending_button": "Вернуться в CoinHunter",
 
-    "404_error_text": "Похоже, мы столкнулись со сбоем. Страница, которую вы искали, исчезла в глубинах киберпространства. Не волнуйтесь, мы здесь, чтобы провести вас обратно к свету."
+    "404_error_text": "Похоже, мы столкнулись со сбоем. Страница, которую вы искали, исчезла в глубинах киберпространства. Не волнуйтесь, мы здесь, чтобы провести вас обратно к свету.",
+
+    "install_app_button_text": "ДОБАВИТЬ НА ГЛАВНЫЙ ЭКРАН"
 }
