refactor: filter mobile margins

--- a/locales/ru-RU.json
+++ b/locales/ru-RU.json
@@ -191,6 +191,7 @@
     "table_unit_foundation": "Год основания",
 
     "spreads_history_title": "История спредов",
+    "spreads_filter_element_2_name": "Криптобиржи",
     
     "form_password_title": "Пароль",
     "form_repeat_password_title": "Повторите пароль",
