--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -190,6 +190,7 @@
     "table_unit_foundation": "Active since",
 
     "spreads_history_title": "Spreads history",
+    "spreads_filter_element_2_name": "Ask exchange",
 
     "form_password_title": "Password",
     "form_repeat_password_title": "Repeat password",
